cloudnative-bootcamp-examples/nodejs/node-express/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
  selector:
    app: "nodejs-api-selector"
